# osrs-tools-rust

./: .gitignore  Cargo.toml  bacon.toml
resources/: items_2022-10-24.csv
src/: bonus.rs  boost.rs  boost_mod.rs  character.rs  character_mod.rs  combat.rs  data.rs  effect.rs  levels.rs  lib.rs  loadout.rs  main.rs  modifiers.rs  prayer.rs  prayer_mod.rs  simulation.rs  spell.rs  spell_mod.rs  stance.rs  stance_mod.rs  style.rs  style_mod.rs
src/bonus/: bonus_like.rs  equipment.rs  gear.rs  gear_mod.rs  monster_bonus.rs  secondary_bonus.rs
src/bonus/equipment/: equipment_info.rs  sets.rs  utils.rs
src/bonus/gear/: all_gear.rs  special_weapon.rs  weapon.rs
src/bonus/gear_mod/: all_gear.rs  equipment.rs  gear.rs  gear_bonus.rs  special_weapon.rs  weapon.rs
src/boost/: potions.rs
src/boost_mod/: boost.rs
src/character/: monster.rs  player.rs
src/character_mod/: character.rs  monster.rs  player.rs
src/combat/: damage_analysis.rs  damage_distribution.rs  max_hit.rs
src/combat_mod/: combat.rs
src/data/: bolts.rs  mod.rs  weapons.rs
src/effect_mod/: effect.rs
src/loadout/: equipment.rs  gear.rs  gear_bonus.rs  has_bonus.rs  monster_bonus.rs
src/modifiers/: player.rs
src/prayer/: prayers.rs
src/prayer_mod/: prayer.rs  prayers.rs
src/spell/: spells.rs
src/spell_mod/: spell.rs  spell_collections.rs  spells.rs
src/stance_mod/: stance.rs  stance_stats.rs
src/stat/: aux_stat.rs  basic_stat.rs  mod.rs
src/style/: mod.rs  style.rs  style_collections.rs  styles_map.rs
src/style_mod/: style.rs  style_collections.rs  styles_map.rs
(+72 files in other folders)
