[package]
name = "osrs-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2.0"
strum = "0.24"
strum_macros = "0.24"
derive_deref = "1.1.1"
libmath = "0.2.1"
num = "0.4.0"
lazy_static = "1.4.0"
csv = "1.1.6"
serde = { version = "1.0.147", features = ["derive"] }
derive_builder = "0.11.2"
thiserror = "1.0.37"
float-cmp = "0.9.0"
